--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,26 +1,26 @@
 name: test
 
 on:
-    push:
-        branches:
-            - main
-        paths:
-            - '.github/workflows/**'
-            - '__test__/**'
-            - 'src/**'
+  push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/**'
+      - '__test__/**'
+      - 'src/**'
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - uses: actions/checkout@v2
-            - name: Use Node.js
-              uses: actions/setup-node@v1
-              with:
-                  node-version: 14
-            - name: lint and test
-              run: |
-                  npm i
-                  npm run lint
-                  npm run test:remote
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: lint and test
+        run: |
+          npm i
+          npm run lint
+          npm run jest
